--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <form action="authenticate" method="post">
+  <form action="/authenticate" method="post">
     <input name="password" type="password" placeholder="Password">
     <input type="submit" value="Login">
   </form>
